--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -50,7 +50,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" (click)="getValue()" class="btn btn-primary">Submit</button>
+            <button type="submit" (click)="getValue()" id="btn_sub" class="btn btn-primary">Submit</button>
           </form>
     </div>
 </div>
