--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -34,173 +34,134 @@
       </div>
     </div>
   </nav>
-<div class="container" [style.background]="'black'">
+<div class="container">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Delivery</button>
+          <button (click)="getDelivery()" class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Delivery</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link"  id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Pickup</button>
+          <button (click)="getPickup()"  class="nav-link"  id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Pickup</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Pedidos Emergencia</button>
+          <button (click)="getEmergencia()"  class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Pedidos Emergencia</button>
         </li>
       </ul>
       <div class="tab-content " id="pills-tabContent">
-        <div class="stab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-            Aquí veras los pedidos delivery
-            <div class="row">
-                <div class="col-md-3">
+        <div  class="stab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div *ngIf="this.showDelivery" class="row">
+                <div class="col-md-3" *ngFor="let order of ordersStructure">
                     <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-light">
-                            <div class="start-0 text-black fw-bold">
-                                Procesada
+                        <div class="card-header" 
+                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
+                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
+                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
+                            <div class="start-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
+                                {{order.estado}}
                             </div>
-                            <div class="end-0 text-black fw-bold">
+                            <div class="end-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
                                 00:23:18
                             </div>
                             
                             </div>
                         <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-light text-dark">ver orden</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-secondary">
-                            <div class="start-0 text-white fw-bold">
-                                Asignada
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-Secondary text-white">ver orden</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-warning">
-                            <div class="start-0 text-white fw-bold">
-                                En Ruta
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-warning text-datck">ver orden</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3"> 
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-info">
-                            <div class="start-0 text-white fw-bold">
-                                En el Sitio
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-info text-datck">ver orden</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3"> 
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-success">
-                            <div class="start-0 text-white fw-bold">
-                                Entregado
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-success text-datck">ver orden</a>
-                        </div>
-                    </div>
-                </div> 
-                <div class="col-md-3"> 
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-danger">
-                            <div class="start-0 text-white fw-bold">
-                                Emergencia
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-danger text-datck">ver orden</a>
-                        </div>
-                    </div>
-                </div> 
-                <div class="col-md-3"> 
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header bg-dark">
-                            <div class="start-0 text-white fw-bold">
-                                Programado
-                            </div>
-                            <div class="end-0 text-white fw-bold">
-                                00:23:18
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">Juanito Junero Juarez Jarocho</h6>
-                            <p class="card-text">Fecha 21-07-2022</p>
-                            <p class="card-text">Tipo de pago Efectivo</p>
-                            <p class="card-text">Total Q 100.00</p>
-                            <p class="card-text">Pedido 124578</p>
-                            <a href="#" class="card-link btn bg-dark text-datck">ver orden</a>
+                            <h6 class="card-subtitle">{{order.nombre}}</h6>
+                            <p class="card-text">Fecha {{order.fecha}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Total Q {{order.total}}</p>
+                            <p class="card-text">Pedido {{order.numeropedido}}</p>
+                            <a href="#" class="card-link btn bg-light text-dark"
+                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
+                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
+                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
+                            >ver orden</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">Aquí veras pedidos pickup</div>
-        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">Aquí veras pedidos de emergencia</div>
+        <div  class="tab-pane fade row" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div *ngIf="this.showPickup" class="row">
+                <div class="col-md-3" *ngFor="let order of ordersStructure">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-header" 
+                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
+                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
+                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
+                            <div class="start-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
+                                {{order.estado}}
+                            </div>
+                            <div class="end-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
+                                00:23:18
+                            </div>
+                            
+                            </div>
+                        <div class="card-body">
+                            <h6 class="card-subtitle">{{order.nombre}}</h6>
+                            <p class="card-text">Fecha {{order.fecha}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Total Q {{order.total}}</p>
+                            <p class="card-text">Pedido {{order.numeropedido}}</p>
+                            <a href="#" class="card-link btn bg-light text-dark"
+                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
+                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
+                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
+                            >ver orden</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            
+            <div *ngIf="this.showEmergencia" class="row">
+                <div class="col-md-3" *ngFor="let order of ordersStructure">
+                    <div class="card" style="width: 15rem;">
+                        <div class="card-header" 
+                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
+                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
+                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
+                            <div class="start-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
+                                {{order.estado}}
+                            </div>
+                            <div class="end-0 text-black fw-bold"
+                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
+                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
+                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
+                                00:23:18
+                            </div>
+                            
+                            </div>
+                        <div class="card-body">
+                            <h6 class="card-subtitle">{{order.nombre}}</h6>
+                            <p class="card-text">Fecha {{order.fecha}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Total Q {{order.total}}</p>
+                            <p class="card-text">Pedido {{order.numeropedido}}</p>
+                            <a href="#" class="card-link btn bg-light text-dark" (click)="router.navigate(['/PedidoDelivery']);"
+                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
+                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
+                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
+                            >ver orden</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
 </div>
 
