--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -1,7 +1,8 @@
 <br>
 <div class="container-sm">
-    <div *ngIf="this.vistaPedido"  class="">
-        <div *ngFor="let orderBiker of ordersStructureBiker" class="row border border-primary border-2">
+  
+        <div *ngFor="let orderBiker of ordersStructureBiker" class="">
+            <div *ngIf="orderBiker.vistaPedido"  class="row border border-primary border-2">
             <div class="col-12 fs-6 fw-bold text-danger">
                 Orden No. {{orderBiker.orden}}
             </div>
@@ -18,18 +19,18 @@
                 {{orderBiker.direccion}}
             </div>
             <div class=" col-6 row">
-                <div *ngIf="this.mEnRuta" class="">
-                    <button (click)="showRuta()" class="btn btn-warning col-12">inicio</button>
+                <div *ngIf="orderBiker.mEnRuta" class="">
+                    <button (click)="showRuta(orderBiker.orden, orderBiker.indice)" id="{{'ruta' + orderBiker.orden}}" class="btn btn-warning col-12">inicio</button>
                 </div>
-                <div *ngIf="this.mEnSitio" class="">
-                    <button (click)="showSitio()" class="btn btn-info col-12">En sitio</button>
+                <div *ngIf="orderBiker.mEnSitio" class="">
+                    <button (click)="showSitio(orderBiker.orden, orderBiker.indice)" id="{{'sitio' + orderBiker.orden}}" class="btn btn-info col-12">En sitio</button>
                 </div>
-                <div *ngIf="this.mEntregado" class="">
-                    <button (click)="finOrden()" class="btn btn-success col-12">fin</button>
+                <div *ngIf="orderBiker.mEntregado" class="">
+                    <button (click)="finOrden(orderBiker.orden, orderBiker.indice)" id="{{'fin' + orderBiker.orden}}" class="btn btn-success col-12">fin</button>
                 </div>
             </div>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger col-6" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button (click)="pinchazo(orderBiker.orden)" data-orden="{{orderBiker.orden}}" type="button" class="btn btn-danger col-6" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Emergencia
             </button>
   
@@ -39,19 +40,29 @@
                 </a>
             </div>
             <div class="collapse" id="{{'collapseExample' + orderBiker.orden}}">
-                <div class="row card card-body">
+                <div class="card card-body">
+                    <div class="row">
+                        <div class="col-6">
+                            Tipo pago
+                        </div>
+                        <div class="col-6">
+                            {{orderBiker.tipoPago}}
+                        </div>
+                        <div class="col-6">
+                            Total
+                        </div>
+                        <div class="col-6">
+                            {{orderBiker.total}}
+                        </div>
+                        <div class="col-6">
+                            Cambio
+                        </div>
+                        <div class="col-6">
+                            {{orderBiker.cambio}}
+                        </div>
+                    </div>
                     <div class="col-12">
-                        {{orderBiker.tipoPago}}
-                    </div>
-                    <div class="col-6">
-                        Total
-                    </div>
-                    <div class="col-6">
-                        {{orderBiker.total}}
-                    </div>
-                    
-                    <div class="col-12">
-                        <table class="table table-borderless col-12">
+                        <table class="table table-dark table-striped table-sm col-12">
                             <thead>
                               <tr>
                                 <th scope="col">Item</th>
@@ -60,30 +71,40 @@
                                 <th scope="col">Total</th>
                               </tr>
                             </thead>
-                            <tbody>
+                            <tbody *ngIf="orderBiker.detalle.length > 0">
                               <tr *ngFor="let masterBiker of orderBiker.detalle">
                                     <td scope="row">
                                         <div class="fs-6">
                                             {{masterBiker.master}}
                                         </div>
-                                        <div *ngFor="let itemsBiker of masterBiker.items" class="">
-                                            <div>
-                                                - {{itemsBiker.producto}}
+                                        <div *ngIf="masterBiker.items && masterBiker.items.length > 0">
+                                            <div *ngFor="let itemsBiker of masterBiker.items" class="">
+                                                <div>
+                                                    - {{itemsBiker.producto}}
+                                                    <div *ngIf="itemsBiker.complemento && itemsBiker.complemento.length > 0">
+                                                        <div *ngFor="let complemento of itemsBiker.complemento">
+                                                            <div>
+                                                                -- {{complemento.itemcomp}}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
+                                        
                                     </td>
                                     <td>{{masterBiker.cantidad}}</td>
                                     <td>{{masterBiker.cantidad}}</td>
                                     <td>Q {{masterBiker.total}}</td>
                               </tr>
-
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
+
     <!-- Modal -->
 </div>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
