--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -1,39 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand text-primary" href="#">LIMONWARE</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+<NavSm></NavSm>
 <div class="container">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -72,10 +37,10 @@
                         <div class="card-body">
                             <h6 class="card-subtitle">{{order.nombre}}</h6>
                             <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
                             <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeropedido}}</p>
-                            <a href="#" class="card-link btn bg-light text-dark"
+                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
+                            <a routerLink="/single-order" class="card-link btn bg-light text-dark"
                             [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
                         'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
                         'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
@@ -110,10 +75,10 @@
                         <div class="card-body">
                             <h6 class="card-subtitle">{{order.nombre}}</h6>
                             <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
                             <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeropedido}}</p>
-                            <a href="#" class="card-link btn bg-light text-dark"
+                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
+                            <a routerLink="/single-order" class="card-link btn bg-light text-dark"
                             [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
                         'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
                         'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
@@ -149,10 +114,10 @@
                         <div class="card-body">
                             <h6 class="card-subtitle">{{order.nombre}}</h6>
                             <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipopago}}</p>
+                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
                             <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeropedido}}</p>
-                            <a href="#" class="card-link btn bg-light text-dark" (click)="router.navigate(['/PedidoDelivery']);"
+                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
+                            <a routerLink="/single-order" class="card-link btn bg-light text-dark" (click)="router.navigate(['/PedidoDelivery']);"
                             [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
                         'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
                         'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
