--- a/src/app/pages/itemsmodal/itemsmodal.component.html
+++ b/src/app/pages/itemsmodal/itemsmodal.component.html
@@ -5,11 +5,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body row">
-        <button class="btn btn-outline-success col-6">Pinchazo</button>
-        <button class="btn btn-outline-warning col-6">Sin gasolina</button>
-        <button class="btn btn-outline-dark col-6">Asalto</button>
-        <button class="btn btn-outline-danger col-6">Accidente</button>
-        <button class="btn btn-outline-info col-6">me fui con Diosito</button>
+        <button class="btn btn-outline-success col-6" data-bs-dismiss="modal">Pinchazo</button>
+        <button class="btn btn-outline-warning col-6" data-bs-dismiss="modal">Sin gasolina</button>
+        <button class="btn btn-outline-dark col-6" data-bs-dismiss="modal">Asalto</button>
+        <button class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Accidente</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
