--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -25,21 +25,39 @@
             <div class="col-12">
                 {{orderBiker.direccion}}
             </div>
-            <div class="col-12">
+            <div class="col-6">
                 Telefono
             </div>
-            <div class="col-12">
-                {{orderBiker.telefono}}
+            <div class="col-6">
+                <a href="{{'tel:+502'+orderBiker.telefono}}">{{orderBiker.telefono}}</a>               
+            </div>
+            <div class="col-6">
+                Tipo pago
+            </div>
+            <div class="col-6">
+                {{orderBiker.tipoPago}}
+            </div>
+            <div class="col-6">
+                Total
+            </div>
+            <div class="col-6">
+                {{orderBiker.total}}
+            </div>
+            <div class="col-6">
+                Cambio
+            </div>
+            <div class="col-6">
+                {{orderBiker.cambio}}
             </div>
             <div class=" col-6 row">
                 <div *ngIf="orderBiker.mEnRuta" class="">
-                    <button (click)="showRuta(orderBiker.orden, orderBiker.indice)" id="{{'ruta' + orderBiker.orden}}" class="btn btn-warning col-12">En ruta</button>
+                    <button (click)="showRuta(orderBiker.id, orderBiker.indice)" id="{{'ruta' + orderBiker.orden}}" class="btn btn-warning col-12">En ruta</button>
                 </div>
                 <div *ngIf="orderBiker.mEnSitio" class="">
-                    <button (click)="showSitio(orderBiker.orden, orderBiker.indice)" id="{{'sitio' + orderBiker.orden}}" class="btn btn-info col-12">En sitio</button>
+                    <button (click)="showSitio(orderBiker.id, orderBiker.indice)" id="{{'sitio' + orderBiker.orden}}" class="btn btn-info col-12">En sitio</button>
                 </div>
                 <div *ngIf="orderBiker.mEntregado" class="">
-                    <button (click)="finOrden(orderBiker.orden, orderBiker.indice)" id="{{'fin' + orderBiker.orden}}" class="btn btn-success col-12">fin</button>
+                    <button (click)="showEntrega(orderBiker.id, orderBiker.indice)" id="{{'fin' + orderBiker.orden}}" class="btn btn-success col-12">fin</button>
                 </div>
             </div>
             <div class="col-12">
@@ -50,62 +68,102 @@
             <div class="collapse" id="{{'collapseExample' + orderBiker.orden}}">
                 <div class="card card-body">
                     <div class="row">
-                        <div class="col-6">
-                            Tipo pago
-                        </div>
-                        <div class="col-6">
-                            {{orderBiker.tipoPago}}
-                        </div>
-                        <div class="col-6">
-                            Total
-                        </div>
-                        <div class="col-6">
-                            {{orderBiker.total}}
-                        </div>
-                        <div class="col-6">
-                            Cambio
-                        </div>
-                        <div class="col-6">
-                            {{orderBiker.cambio}}
-                        </div>
+                        
                     </div>
                     <div class="col-12">
                         <table class="table table-dark table-striped table-sm col-12">
                             <thead>
-                              <tr>
-                                <th scope="col">Item</th>
-                                <th scope="col">Cantidad</th>
-                                <th scope="col">Precio</th>
-                                <th scope="col">Total</th>
-                              </tr>
-                            </thead>
-                            <tbody *ngIf="orderBiker.detalle.length > 0">
-                              <tr *ngFor="let masterBiker of orderBiker.detalle">
-                                    <td scope="row">
-                                        <div class="fs-6">
-                                            {{masterBiker.master}}
-                                        </div>
-                                        <div *ngIf="masterBiker.items && masterBiker.items.length > 0">
-                                            <div *ngFor="let itemsBiker of masterBiker.items" class="">
-                                                <div>
-                                                    - {{itemsBiker.producto}}
-                                                    <div *ngIf="itemsBiker.complemento && itemsBiker.complemento.length > 0">
-                                                        <div *ngFor="let complemento of itemsBiker.complemento">
-                                                            <div>
-                                                                -- {{complemento.itemcomp}}
+                                <tr>
+                                    <th scope="col">Item</th>
+                                    <th scope="col">Cantidad</th>
+                                    <th scope="col">Precio</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                                </thead>
+                                <tbody *ngIf="orderBiker.detalle && orderBiker.detalle.length > 0" class="text-center">
+                                    <tr *ngFor="let masterSingle of orderBiker.detalle">
+                                            <td scope="row">
+                                                <div class="fs-6">
+                                                    {{masterSingle.master}}
+                                                </div>
+                                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                                        <div class="">
+                                                            - {{itemsSingle.producto}}
+                                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                                                <div *ngFor="let complemento of itemsSingle.complemento" class="">
+                                                                    <div>
+                                                                        &nbsp; &nbsp; &nbsp;-- {{complemento.itemcomp}}
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </div>
-                                        
-                                    </td>
-                                    <td>{{masterBiker.cantidad}}</td>
-                                    <td>{{masterBiker.cantidad}}</td>
-                                    <td>Q {{masterBiker.total}}</td>
-                              </tr>
-                            </tbody>
+                                                
+                                            </td>
+                                            <td>
+                                                <div class="fs-6text-center">
+                                                    {{masterSingle.cantidad}}
+                                                </div>
+                                                
+                                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                                        <div class="">
+                                                            {{itemsSingle.unidad}}
+                                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                                                <div *ngFor="let complemento of itemsSingle.complemento" class="">
+                                                                    <div>
+                                                                        {{complemento.cantidad}}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                </td>
+                                            <td>
+                                                <div class="fs-6 text-center">
+                                                    {{masterSingle.total}}
+                                                </div>
+                                                
+                                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                                        <div class="">
+                                                            {{itemsSingle.precio}}
+                                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                                                <div *ngFor="let complemento of itemsSingle.complemento" class="">
+                                                                    <div>
+                                                                       {{complemento.precio}}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="fs-6 text-center">
+                                                    Q {{masterSingle.totalprd}}
+                                                </div>
+                                                
+                                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                                        <div class="">
+                                                            {{itemsSingle.precio}}
+                                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                                                <div *ngFor="let complemento of itemsSingle.complemento" class="">
+                                                                    <div>
+                                                                        {{complemento.precio}}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                      </tr>
+                                </tbody>
                         </table>
                     </div>
                 </div>
@@ -116,6 +174,23 @@
     <!-- Modal -->
 </div>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <itemsModal></itemsModal>
+    <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Seleccione su Emergencia</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body row">
+            <button class="btn btn-outline-success col-6" data-bs-dismiss="modal" (click)="prick()">Pinchazo</button>
+            <button class="btn btn-outline-warning col-6" data-bs-dismiss="modal">Sin gasolina</button>
+            <button class="btn btn-outline-dark col-6" data-bs-dismiss="modal">Asalto</button>
+            <button class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Accidente</button>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
 </div>
 
